# alpaca-api

./: .gitignore  README.md  pyproject.toml
examples/: eg.ipynb
src/alpaca_api/: __init__.py  download.py
tests/: test_download.py
