[project]
name = "alpaca-api-project"
version = "0.1.0"
description = "A python library for working with the Alpaca API"
authors = [{ name = "Isaiah Dailey", email = "isaiahdaileytx@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "datetime>=5.5",
  "dotenv>=0.9.9",
  "pandas>=2.3.0",
  "requests>=2.32.4",
  "rich>=14.0.0",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
  "vulture>=2.14",
  "pip>=25.1.1",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ipykernel>=6.29.5",
  "ipynb>=0.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
